<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="274dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="430dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/final_logo" />

    <EditText
        android:id="@+id/editText"
        style="@android:style/Widget.EditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:background="#33000000"
        android:drawableLeft="@drawable/ic_action_name_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="219dp"
        android:background="#33000000"
        android:drawableLeft="@drawable/ic_action_name_pass"
        android:ems="10"
        android:hint="@string/paassword"
        android:inputType="textPassword"
        android:textSize="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="139dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="StartNewActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="84dp"
        android:text="@string/Register"
        android:textSize="14sp" />
</RelativeLayout>